[package]
name = "rhabarberbar-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.91"
clap = { version = "4.5.20", features = ["derive"] }
open = "5.3.1"
rhabarberbar-core = { path = "../rhabarberbar-core" }
tempfile = "3.14.0"

[features]
debug-commands = []

[[bin]]
name = "rhabarberbar"
path = "src/main.rs"
